First attempt at calculating arbitrage spread and profits

--- a/crypto_arbitrage.ipynb
+++ b/crypto_arbitrage.ipynb
@@ -1467,7 +1467,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1421.000000\n",
+       "mean        5.767368\n",
+       "std        46.214511\n",
+       "min      -142.000000\n",
+       "25%       -26.890000\n",
+       "50%         5.480000\n",
+       "75%        36.000000\n",
+       "max       319.990000\n",
+       "Name: Close, dtype: float64"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# For the date early in the dataset, measure the arbitrage spread between the two exchanges\n",
+    "# by subtracting the lower-priced exchange from the higher-priced one\n",
+    "arbitrage_spread_early = coinbase['Close'].loc['2018-01-01'] - bitstamp['Close'].loc['2018-01-01'] \n",
+    "\n",
+    "# Use a conditional statement to generate the summary statistics for each arbitrage_spread DataFrame\n",
+    "# XXX\n",
+    "arbitrage_spread_early.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1430.000000\n",
+       "mean      120.214510\n",
+       "std        85.164846\n",
+       "min       -48.010000\n",
+       "25%        37.002500\n",
+       "50%       132.420000\n",
+       "75%       203.237500\n",
+       "max       300.270000\n",
+       "Name: Close, dtype: float64"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# @TODO\n",
+    "# For the date in the middle of the dataset, measure the arbitrage spread between the two exchanges\n",
+    "# by subtracting the lower-priced exchange from the higher-priced one\n",
+    "arbitrage_spread_middle = bitstamp['Close'].loc['2018-01-29'] - coinbase['Close'].loc['2018-01-29']\n",
+    "\n",
+    "# Use a conditional statement to generate the summary statistics for each arbitrage_spread DataFrame\n",
+    "# XXX\n",
+    "arbitrage_spread_middle.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -1484,30 +1553,12 @@
        "Name: Close, dtype: float64"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# For the date early in the dataset, measure the arbitrage spread between the two exchanges\n",
-    "# by subtracting the lower-priced exchange from the higher-priced one\n",
-    "arbitrage_spread_early = coinbase['Close'].loc['2018-01-01'] - bitstamp['Close'].loc['2018-01-01'] \n",
-    "\n",
-    "# Use a conditional statement to generate the summary statistics for each arbitrage_spread DataFrame\n",
-    "# XXX\n",
-    "arbitrage_spread_early.describe()\n",
-    "\n",
-    "# @TODO\n",
-    "# For the date in the middle of the dataset, measure the arbitrage spread between the two exchanges\n",
-    "# by subtracting the lower-priced exchange from the higher-priced one\n",
-    "arbitrage_spread_middle = bitstamp['Close'].loc['2018-01-29'] - coinbase['Close'].loc['2018-01-29']\n",
-    "\n",
-    "# Use a conditional statement to generate the summary statistics for each arbitrage_spread DataFrame\n",
-    "# XXX\n",
-    "arbitrage_spread_middle.describe()\n",
-    "\n",
-    "\n",
     "# @TODO\n",
     "# For the date late in the dataset, measure the arbitrage spread between the two exchanges\n",
     "# by subtracting the lower-priced exchange from the higher-priced one\n",
@@ -1527,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -1542,7 +1593,7 @@
        "Name: Close, dtype: float64"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1550,17 +1601,74 @@
    "source": [
     "# For the date early in the dataset, calculate the spread returns by dividing the instances when the arbitrage spread is positive (> 0) \n",
     "# by the price of Bitcoin from the exchange you are buying on (the lower-priced exchange).\n",
-    "spread_return_early= arbitrage_spread_early[arbitrage_spread_early > 0] / bitstamp['Close'].loc['2018-01-01']\n",
+    "spread_return_early = arbitrage_spread_early[arbitrage_spread_early > 0] / bitstamp['Close'].loc['2018-01-01']\n",
     "\n",
     "# Review the spread return DataFrame\n",
-    "spread_return_early.head()\n",
-    "\n",
-    "# @TODO\n",
-    "# For date middle in the dataset...\n",
+    "spread_return_early.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp\n",
+       "2018-01-29 00:00:00    0.017609\n",
+       "2018-01-29 00:01:00    0.018919\n",
+       "2018-01-29 00:02:00    0.018941\n",
+       "2018-01-29 00:03:00    0.019454\n",
+       "2018-01-29 00:04:00    0.018203\n",
+       "Name: Close, dtype: float64"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# For the date middle in the dataset, calculate the spread returns by dividing the instances when the arbitrage spread is positive (> 0) \n",
+    "# by the price of Bitcoin from the exchange you are buying on (the lower-priced exchange).\n",
+    "spread_return_middle = arbitrage_spread_middle[arbitrage_spread_middle > 0] / bitstamp['Close'].loc['2018-01-29']\n",
     "\n",
     "# @TODO\n",
     "# For date later in the dataset...\n",
+    "spread_return_middle.head()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp\n",
+       "2018-03-01 00:00:00    0.001687\n",
+       "2018-03-01 00:01:00    0.002016\n",
+       "2018-03-01 00:02:00    0.001151\n",
+       "2018-03-01 00:03:00    0.002255\n",
+       "2018-03-01 00:04:00    0.002291\n",
+       "Name: Close, dtype: float64"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# For the date late in the dataset, calculate the spread returns by dividing the instances when the arbitrage spread is positive (> 0) \n",
+    "# by the price of Bitcoin from the exchange you are buying on (the lower-priced exchange).\n",
+    "spread_return_late = arbitrage_spread_late[arbitrage_spread_late > 0] / bitstamp['Close'].loc['2018-03-01']\n",
+    "\n",
+    "# Review the spread return DataFrame\n",
+    "spread_return_late.head()\n"
    ]
   },
   {
@@ -1572,22 +1680,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Timestamp\n",
-       "2018-01-16 02:56:00    0.012962\n",
-       "2018-01-16 02:57:00    0.010838\n",
-       "2018-01-16 02:59:00    0.014171\n",
-       "2018-01-16 03:00:00    0.010675\n",
-       "2018-01-16 03:06:00    0.019704\n",
+       "2018-01-01 09:10:00    0.011455\n",
+       "2018-01-01 23:25:00    0.022465\n",
+       "2018-01-01 23:26:00    0.024616\n",
+       "2018-01-01 23:27:00    0.015948\n",
+       "2018-01-01 23:28:00    0.011261\n",
        "Name: Close, dtype: float64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,17 +1703,66 @@
    "source": [
     "# For the date early in the dataset, determine the number of times your trades with positive returns \n",
     "# exceed the 1% minimum threshold (.01) that you need to cover your costs\n",
-    "profitable_trades_early = # YOUR CODE HERE\n",
+    "profitable_trades_early = spread_return_early[spread_return_early > 0.01]\n",
     "\n",
     "# Review the first five profitable trades\n",
-    "# YOUR CODE HERE\n",
+    "profitable_trades_early.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp\n",
+       "2018-01-29 00:00:00    0.017609\n",
+       "2018-01-29 00:01:00    0.018919\n",
+       "2018-01-29 00:02:00    0.018941\n",
+       "2018-01-29 00:03:00    0.019454\n",
+       "2018-01-29 00:04:00    0.018203\n",
+       "Name: Close, dtype: float64"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# For the date in middle of the dataset, determine the number of times your trades with positive returns \n",
+    "# exceed the 1% minimum threshold (.01) that you need to cover your costs\n",
+    "profitable_trades_middle = spread_return_middle[spread_return_middle > 0.01]\n",
     "\n",
+    "# Review the first five profitable trades\n",
+    "profitable_trades_middle.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Series([], Name: Close, dtype: float64)"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# For the date late in the dataset, determine the number of times your trades with positive returns \n",
+    "# exceed the 1% minimum threshold (.01) that you need to cover your costs\n",
+    "profitable_trades_late = spread_return_late[spread_return_late > 0.01]\n",
     "\n",
-    "# @TODO\n",
-    "# For date middle in the dataset...\n",
-    "\n",
-    "# @TODO\n",
-    "# For date later in the dataset..."
+    "# Review the first five profitable trades\n",
+    "profitable_trades_late.head()"
    ]
   },
   {
@@ -1617,24 +1774,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    73.000000\n",
-       "mean      0.016720\n",
-       "std       0.007628\n",
-       "min       0.010109\n",
-       "25%       0.012061\n",
-       "50%       0.014794\n",
-       "75%       0.018124\n",
-       "max       0.051633\n",
+       "count    7.000000\n",
+       "mean     0.015453\n",
+       "std      0.005833\n",
+       "min      0.010427\n",
+       "25%      0.011358\n",
+       "50%      0.012001\n",
+       "75%      0.019207\n",
+       "max      0.024616\n",
        "Name: Close, dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1642,7 +1799,67 @@
    "source": [
     "# For the date early in the dataset, generate the summary statistics for the profitable trades\n",
     "# or you trades where the spread returns are are greater than 1%\n",
-    "# YOUR CODE HERE"
+    "profitable_trades_early.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    741.000000\n",
+       "mean       0.017485\n",
+       "std        0.003024\n",
+       "min        0.010003\n",
+       "25%        0.015157\n",
+       "50%        0.017908\n",
+       "75%        0.019671\n",
+       "max        0.026361\n",
+       "Name: Close, dtype: float64"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# For the date in middle of the dataset, generate the summary statistics for the profitable trades\n",
+    "# or you trades where the spread returns are are greater than 1%\n",
+    "profitable_trades_middle.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    0.0\n",
+       "mean     NaN\n",
+       "std      NaN\n",
+       "min      NaN\n",
+       "25%      NaN\n",
+       "50%      NaN\n",
+       "75%      NaN\n",
+       "max      NaN\n",
+       "Name: Close, dtype: float64"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# For the date late in the dataset, generate the summary statistics for the profitable trades\n",
+    "# or you trades where the spread returns are are greater than 1%\n",
+    "profitable_trades_late.describe()"
    ]
   },
   {
